# sphinx-scrapy

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGES.rst  README.rst  pyproject.toml
.github/workflows/: publish.yml
sphinx_scrapy/: __init__.py  cli.py  config.py  tox_plugin.py
